JPG saved temporarily on OA